--- a/Tools/STV/Settings.cfg
+++ b/Tools/STV/Settings.cfg
@@ -2,11 +2,11 @@
 <CONFIG>
   <view dual="False" captions="False"/>
   <otdr count="1">
-    <otdr0 ID="РўРѕРїР°Р·-7000-AR" SN="337" M_ID="" M_SN="" Soft="" Supp="" Other=""/>
+    <otdr0 ID="???????°?·-7000-AR" SN="337" M_ID="" M_SN="" Soft="" Supp="" Other=""/>
     <otdr1 ID="FTB-200" SN=" в„–707889" M_ID="" M_SN="" Soft="" Supp="" Other=""/>
   </otdr>
   <color back="clWhite" main="clBlack" reverse="clBlue"/>
-  <folder load="D:\PROJECT_BEGIN\РџСЂРѕРµРєС‚С‹_2022\РњРўРЎ РњРѕСЂРґРѕРІРёСЏ РўСЂР°СЃСЃС‹\РЎР°СЂРѕРІ\Trace\" save="H:\PROJECT_BEGIN\РџР РћР•РљРўР«_2024\Trace\" table="D:\PROJECT_BEGIN\РџР РћР•РљРўР«_2023\_РњРўРЎ РљРѕСЂР°Р±Р»РµСЃС‚СЂРѕРёС‚РµР»РµР№ 1Р°\Trace\" reverse=""/>
+  <folder load="D:\PROJECT_BEGIN\???????µ???‚?‹_2022\?????? ???????????????? ?????°?????‹\???°??????\Trace\" save="H:\PROJECT_BEGIN\??? ???•?????«_2024\Trace\" table="D:\PROJECT_BEGIN\??? ???•?????«_2023\_?????? ???????°?±?»?µ???‚???????‚?µ?»?µ?? 1?°\Trace\" reverse=""/>
   <events check="False" other="200" nm1310="200" nm1550="200" number="False"/>
   <report top="False" excel="False" bottom="False" comment="True" topline="" beginend="True" filename="True" threshold="True" bottomline=""/>
 </CONFIG>
